2009-10-26 Harri Pitkänen <hatapitk@iki.fi>

	* Reduce scope of a variable to fix cppcheck warning.

2009-10-04 Harri Pitkänen <hatapitk@iki.fi>

	* Re-enable grammar checker on Windows, since it works when libvoikko
	  has been built with MSVC.
	* Document the fact that MSVC should be used for building libvoikko on
	  Windows. Change the build system so that libvoikko-1.def -> libvoikko-1.lib
	  conversion is no longer done, because MSVC creates libvoikko-1.lib automatically.
	* Allow copying entire directories when creating standalone extensions. Update
	  the names of files to be copied for libvoikko 2.2.

2009-07-27 Petr Mladek

	* Change order of linker flags on Linux to enable building with
	  -Wl,--as-needed.

2009-05-15 Harri Pitkänen <hatapitk@iki.fi>

	* Replace the icon with something less irritating and add
	  svg version.

2009-04-11 Harri Pitkänen <hatapitk@iki.fi>

	* Implement listing of available dictionaries in standalone
	  extensions.

2009-04-05 Harri Pitkänen <hatapitk@iki.fi>

	* Print debug info to stderr instead of stdout to avoid
	  buffering.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Enable VOIKKO_OPT_ACCEPT_BULLETED_LISTS_IN_GC to silence
	  false positives in bulleted lists.

2009-03-15 Harri Pitkänen <hatapitk@iki.fi>

	* Disable grammar checker on Windows, it does not work.

2009-03-11 Harri Pitkänen <hatapitk@iki.fi>

	* Read dictionary variant from registry on startup.

2009-03-06 Harri Pitkänen <hatapitk@iki.fi>

	* Fall back to default dictionary if specified variant is
	  not available.
	* Show more ugly warnings when SHOW_UGLY_WARNINGS=1.

2009-02-15 Harri Pitkänen <hatapitk@iki.fi>

	* Allow changing dictionary variant in settings.

2009-02-14 Harri Pitkänen <hatapitk@iki.fi>

	* Turn PropertyManager into a proper singleton.

2009-01-31 Harri Pitkänen <hatapitk@iki.fi>

	* Turn SpellChecker, Hyphenator and GrammarChecker into
	  singletons.

2009-01-04 Harri Pitkänen <hatapitk@iki.fi>
