@@ -1,3 +1,8 @@
+2010-01-05 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Fix error handling for cases where configuration is somehow damaged.
+	  Partially fixes SF.net bug #2919454.
+
 2009-10-26 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Reduce scope of a variable to fix cppcheck warning.
